# BeingAliveLanguageGH

./: .clang-format  .gitignore  3  BeingAliveLanguage.slnx  README.md  UpgradeLog.htm  beingAliveLanguage.sln  manifest.yml
.github/: README.md  copilot-instructions.md
.github/workflows/: build-and-release.yml
BALcontract/: BALcontract.csproj  Contract.cs
BALcontract/Properties/: AssemblyInfo.cs
BALcore/: BALcore.cs  BALcore.csproj
BALcore/Properties/: AssemblyInfo.cs
BALloader/: BALloader.cs  BALloaderInfo.cs  BeingAliveLanguage.csproj
BALloader/Properties/: Resources.Designer.cs  Resources.resx
BeingAliveLanguage/: BALMetaInfo.cs  BALPluginInfoExporter.cs  BALarchive.cs  BALclimate.cs  BALcore.cs  BALdebug.cs  BALexternal.cs  BALinfo.cs  BALloader.cs  BALloaderInfo.cs  BALorgan.cs  BALroot.cs  BALsoil.cs  BALtree.cs  BALtreeRaimbault.cs  BALutils.cs  BeingAliveLanguage.csproj  Utils.cs  postbuild.ps1  prebuild.ps1
BeingAliveLanguage/BALCore/: coreCppFunc.cs  coreDebug.cs  coreFuncs.cs  coreMap.cs  coreProps.cs  coreRoot.cs  coreRoot2D.cs  coreRoot3D.cs  coreSoil.cs  coreTree.cs  coreTree2D.cs  coreTree3D.cs
BeingAliveLanguage/Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs  launchSettings.json
BeingAliveLanguageCpp/: BeingAliveLanguageCpp.vcxproj  BeingAliveLanguageCpp.vcxproj.filters  cppFunc.cpp  cppFunc.h  cppFunctions.cpp  cppFunctions.hpp  pch.h
BeingAliveLanguageCppPort/: BeingAliveLanguageCppPort.aps  BeingAliveLanguageCppPort.def  BeingAliveLanguageCppPort.rc  BeingAliveLanguageCppPort.vcxproj  BeingAliveLanguageCppPort.vcxproj.filters  BeingAliveLanguageCppPortApp.cpp  BeingAliveLanguageCppPortApp.h  Resource.h  cppFunc.cpp  cppFunc.h  stdafx.cpp  stdafx.h  targetver.h
BeingAliveLanguageCppPort/res/: BeingAliveLanguageCppPort.rc2
BeingAliveLanguageRhinoCommon/: BeingAliveLanguageRC.csproj  BeingAliveLanguageRhinoCommon.csproj  Utils.cs  cppNativeMethods.cs
BeingAliveLanguageRhinoCommon/Properties/: AssemblyInfo.cs
GeoSharPlusCPP/: CMakeLists.txt  vcpkg.json
GeoSharPlusCPP/include/GeoSharPlusCPP/API/: BridgeAPI.h
GeoSharPlusCPP/include/GeoSharPlusCPP/Extensions/bal/: BridgeAPI.h
GeoSharPlusCPP/src/API/: BridgeAPI.cpp
GeoSharPlusCPP/src/Extensions/bal/: BridgeAPI.cpp
GeoSharPlusCPP/src/Serialization/: GeoSerializer.cpp
GeoSharPlusNET/: BalFuncWrapper.cs  GeoSharPlusNET.csproj  NativeBridge.cs  Wrapper.cs
GeoSharPlusNET/Adapters/Rhino/: RhinoAdapter.cs
GeoSharPlusNET/Core/: MarshalHelper.cs  Platform.cs  Serializer.cs
GeoSharPlusNET/Extensions/: _README.md
GeoSharPlusNET/Extensions/bal/: BalBridge.cs  BalUtils.cs
GeoSharPlusNET/Properties/: launchSettings.json
_release/: BeingAliveLanguage.gha  beingalivelanguage-0.2.0-rh7_10-any.yak  manifest.yml  prepare_yak_pkg.ps1
_release/_releasePrepare/: BeingAliveLanguage.gha  BeingAliveLanguageCppPort.lib  beingalivelanguage-0.2.1-rh7_10-any.yak  beingalivelanguage-0.2.1.1-rh7_10-any.yak  beingalivelanguage-0.2.2-rh7_10-any.yak  beingalivelanguage-0.2.4-rh7_10-any.yak  beingalivelanguage-0.2.6-rh7_10-any.yak  beingalivelanguage-0.2.7-rh7_10-any.yak  beingalivelanguage-0.3.0-rh7_10-any.yak  beingalivelanguage-0.3.1-rh7_10-any.yak  beingalivelanguage-0.3.2-rh7_10-any.yak  beingalivelanguage-0.3.4-rh7_10-any.yak  beingalivelanguage-0.4.0-rh7_20-any.yak  beingalivelanguage-0.4.2-rh7_20-any.yak  beingalivelanguage-0.4.4-rh7_20-any.yak  beingalivelanguage-0.4.8-rh7_20-any.yak  beingalivelanguage-0.4.9-rh7_20-any.yak  beingalivelanguage-0.5.3-rh7_20-any.yak  beingalivelanguage-0.6.0-rh7_20-any.yak  beingalivelanguage-0.6.10-rh7_20-any.yak  beingalivelanguage-0.6.12-rh7_20-any.yak  beingalivelanguage-0.6.3-rh7_20-any.yak  beingalivelanguage-0.6.4-rh7_20-any.yak  beingalivelanguage-0.6.6-rh7_20-any.yak  beingalivelanguage-0.6.8-rh7_20-any.yak  beingalivelanguage-0.6.9-rh7_20-any.yak  beingalivelanguage-0.7.1-rh7_20-any.yak  beingalivelanguage-0.7.3-rh7_20-any.yak  manifest.yml  prepare_yak_pkg.ps1
_release/archive/: beingalivelanguage-0.2.1.2-rh7_10-any.yak  beingalivelanguage-0.2.5-rh7_10-any.yak  beingalivelanguage-0.3.3-rh7_10-any.yak  beingalivelanguage-0.3.5-rh7_20-any.yak  beingalivelanguage-0.4.1-rh7_20-any.yak  beingalivelanguage-0.4.3-rh7_20-any.yak  beingalivelanguage-0.4.5-rh7_20-any.yak  beingalivelanguage-0.4.7-rh7_20-any.yak  beingalivelanguage-0.5.0-rh7_20-any.yak  beingalivelanguage-0.5.1-rh7_20-any.yak  beingalivelanguage-0.5.2-rh7_20-any.yak  beingalivelanguage-0.5.4-rh7_20-any.yak  beingalivelanguage-0.5.5-rh7_20-any.yak  beingalivelanguage-0.6.1-rh7_20-any.yak  beingalivelanguage-0.6.11-rh7_20-any.yak  beingalivelanguage-0.6.2-rh7_20-any.yak  beingalivelanguage-0.6.5-rh7_20-any.yak  beingalivelanguage-0.6.7-rh7_20-any.yak  beingalivelanguage-0.7.0-rh7_20-any.yak  beingalivelanguage-0.7.1-rh7_20-any.yak  beingalivelanguage-0.7.2-rh7_20-any.yak  beingalivelanguage-0.8.3-rh7_0-any.yak  beingalivelanguage-0.8.3-rh8_0-any.yak  beingalivelanguage-0.8.4-rh8_0-any.yak  beingalivelanguage-0.8.7-rh8_0-any.yak  beingalivelanguage-0.9.0-rh8_0-any.yak  beingalivelanguage-0.9.1-rh8_0-any.yak
_release/archive/0.1.2/: manifest.yml
_release/archive/0.2.0/: manifest.yml
devApp/: BufferObject.cs  Demo.cs  GLUtility.cs  PerfGraph.cs  Program.cs  Shader.cs  Texture.cs  Utility.cs  VertexArrayObject.cs  Window.cs  devApp.csproj
devApp/Platform/: Renderer.cs
graphics/: bal_title_img.ai
resource/: BAL_demoFile.gh  BAL_icon.ai
scripts/: postbuild.ps1  prebuild.ps1  prepare_yak_pkg.ps1
